k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-app
  labels:
    app: demo-app
---
apiVersion: v1
kind: Namespace
metadata:
  name: databases
  labels:
    app: demo-app
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    app: demo-app
---
apiVersion: v1
kind: Namespace
metadata:
  name: sonarqube
  labels:
    app: demo-app
